# FingerSalesAI

./: .env.example  .gitignore  README.md  admin.html  admin.js  agent_commands.py  database.py  graph.py  index.html  login.html  main.py  pyproject.toml  requirements.txt  script.js  styles.css
docs/: AGENT_COMMANDS.md  HANDOFF_WORKFLOW.md  PROJECT_GUIDE.md
tests/: test_security_regressions.py
